@@ -8,6 +8,8 @@ Added patch 838865 thanks to dp4b
 Added bin dir this directory will the place to save the scripts to start/stop Jcrontab as an standalone app
 Solved nasty bug with */0 thanks to Guenter
 Solved bug to compare the Year correctly
+Added MemorySourceWithOutPersistence to help in testing and automatic
+environments
 1.4.1
 Updated copyright notice
 changed org.jcrontab.Jcrontab to adapt to the right message
